# zenbundle-interview-playground

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  conftest.py  pyproject.toml  pytest.ini
tests/: test_account_apis.py
webapp/: constants.py  encoders.py  exceptions.py  http.py  models.py  repositories.py  security.py
webapp-ui/: .eslintrc.json  .prettierignore  .prettierrc  package-lock.json  package.json
webapp-ui/public/: index.html
webapp-ui/src/: App.jsx  index.css  index.js
webapp-ui/src/apis/: AccountApi.js  ApiClient.js  DeliveryApi.js
webapp-ui/src/components/: AdPlacement.jsx  ProductCard.jsx
webapp-ui/src/contexts/: ApiContext.jsx  AuthContext.jsx
webapp-ui/src/hooks/: useApi.js  useAuth.js
webapp/routers/: account.py  delivery.py
