[tool.poetry]
name = "zenbundle-interview-playground"
version = "0.1.0"
description = ""
authors = ["Giacomo <giacomo@zenbundle.com>"]
packages = [{include = "webapp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "8.3.2"
pytest-profiling = "^1.7.0"
pytest-dependency = "0.6.0"
pytest-rerunfailures = "14.0"
pytest-order = "1.3.0"
pytest-sugar = "1.0.0"
aiosqlite = "0.20.0"
nest-asyncio = "^1.5.1"
pytest-asyncio = "0.24.0"
freezegun = "^1.2.2"
vulture = "^2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
